Update es5 build to have locale in categories

--- a/index.html
+++ b/index.html
@@ -50,12 +50,17 @@
             .then(res => {
               gfycat.getTrending({tagName: 'funny'})
                 .then(res => console.log('trending', res))
+              gfycat.getTrendingCategories({})
+                .then(res => console.log('trending categories', res))
               gfycat.getTrendingTags()
                 .then(res => console.log('trending tags', res))
               gfycat.getTrendingTagsPopulated()
                 .then(res => console.log('trending tags populated', res))
-              gfycat.getCategories({gfyCount: 1})
-                .then(res => this.setState({tags: res.tags}))
+              gfycat.getCategories({gfyCount: 3})
+                .then(res => {
+                  console.log('categories list with locale', res)
+                  this.setState({tags: res.tags})
+                })
               gfycat.search({search_text: 'nature'})
                 .then(res => console.log('search', res))
             })
